--- a/index.html
+++ b/index.html
@@ -11,13 +11,24 @@
             margin: 40px;
         }
 
-        h1 {
+        h1,
+        h2 {
             text-align: center;
         }
 
-        .abstract {
-            margin-bottom: 40px;
+        .author-info {
             text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .abstract {
+            max-width: 800px;
+            margin: 0 auto 40px;
+            text-align: justify;
+            line-height: 1.6;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
         }
 
         .table-container {
@@ -47,160 +58,229 @@
             margin-bottom: 10px;
         }
 
+        .audio-container label {
+            display: block;
+            text-align: center;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        .audio-block {
+            width: 30%;
+            text-align: center;
+        }
+
         audio {
-            width: 48%;
+            width: 100%;
         }
     </style>
 </head>
 
 <body>
 
-    <h1>Demo Page</h1>
+    <h1>CASC-XVC: Zero-Shot Cross-Lingual Voice Conversion with Content Accordant and Speaker Contrastive Losses</h1>
+
+    <div class="author-info">
+        <p><b>Han-Jie Guo, Hui-Peng Du, Zheng-Yan Sheng, Li-Ping Chen, Yang Ai, Zhen-Hua Ling*</b></p>
+        <p>National Engineering Research Center of Speech and Language Information Processing,<br>University of Science
+            and Technology of China, Hefei, P.R.China</p>
+        <p>{<a href="mailto:ghj2001@mail.ustc.edu.cn">ghj2001</a>,<a href="mailto:redmist@mail.ustc.edu.cn">redmist</a>,
+            <a href="mailto:zysheng@mail.ustc.edu.cn">zysheng</a>}@mail.ustc.edu.cn
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{<a href="mailto:lipchen@ustc.edu.cn">lipchen</a>,<a
+                href="mailto:yangai@ustc.edu.cn">yangai</a>,<a href="mailto:zhling@ustc.edu.cn">zhling</a>}@ustc.edu.cn
+        </p>
+    </div>
 
     <div class="abstract">
-        <h2>Abstract</h2>
-        <p>本页面展示了论文中的音频转换结果，包括中文转英文、英文转中文、中文转中文以及英文转英文的实验结果。每个表格展示了四个样本，表格上方提供了源音频和目标音频的播放功能。</p>
+        <h3>Abstract</h3>
+<!--         <p>Cross-lingual voice conversion (XVC) is a technology that modifies speaker identity while preserving
+            linguistic content
+            in scenarios where the source and target speakers speak different languages.
+            Previous non-parallel methods based on disentanglement face severe training-testing inconsistency issues in
+            XVC tasks
+            due to language differences and the lack of parallel training data, which compromise the quality of the
+            synthesized
+            speech.
+            In this paper, we propose CASC-XVC, an XVC method with content accordant (CA) and speaker contrastive (SC)
+            losses. This
+            method adopts the framework of FreeVC-s as the backbone. We design a cross-lingual fine-tuning process
+            employing pairs
+            of utterances from speakers in different languages to update the modules used in the inference stage. A
+            content
+            accordant and a speaker contrastive loss are introduced to deal with the lack of true parallel targets in
+            the
+            fine-tuning process.
+            Moreover, we use shared self-supervised learning (SSL) representations across different languages along with
+            information
+            perturbation for clean content disentanglement.
+            Both subjective and objective results on a bilingual (English and Chinese) dataset demonstrate that our
+            approach
+            achieves significant improvements in XVC tasks.</p> -->
     </div>
 
     <div class="table-container">
-        <h2>中文转英文</h2>
+        <h2>English to Chinese</h2>
         <div class="audio-container">
-            <audio controls>
-                <source src="source_audio_zh_to_en.mp3" type="audio/mpeg">
-                您的浏览器不支持音频播放。
-            </audio>
-            <audio controls>
-                <source src="target_audio_zh_to_en.mp3" type="audio/mpeg">
-                您的浏览器不支持音频播放。
-            </audio>
+            <div class="audio-block">
+                <label>Source</label>
+                <audio controls>
+                    <source src="source_audio_zh_to_en.wav" type="audio/wav">
+                    您的浏览器不支持音频播放。
+                </audio>
+            </div>
+            <div class="audio-block">
+                <label>Target</label>
+                <audio controls>
+                    <source src="target_audio_zh_to_en.wav" type="audio/wav">
+                    您的浏览器不支持音频播放。
+                </audio>
+            </div>
         </div>
         <table>
             <tr>
-                <th>样本1</th>
-                <th>样本2</th>
-                <th>样本3</th>
-                <th>样本4</th>
+                <th>CyclePPG-XVC</th>
+                <th>YourTTS</th>
+                <th>AutoCycle-VC</th>
+                <th><b>CASC-XVC (ours)</b></th>
             </tr>
             <tr>
                 <td><audio controls>
-                        <source src="zh_to_en_1.mp3" type="audio/mpeg">
+                        <source src="zh_to_en_1.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="zh_to_en_2.mp3" type="audio/mpeg">
+                        <source src="zh_to_en_2.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="zh_to_en_3.mp3" type="audio/mpeg">
+                        <source src="zh_to_en_3.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="zh_to_en_4.mp3" type="audio/mpeg">
+                        <source src="zh_to_en_4.wav" type="audio/wav">
                     </audio></td>
             </tr>
         </table>
     </div>
 
     <div class="table-container">
-        <h2>英文转中文</h2>
+        <h2>Chinese to English</h2>
         <div class="audio-container">
-            <audio controls>
-                <source src="source_audio_en_to_zh.mp3" type="audio/mpeg">
-                您的浏览器不支持音频播放。
-            </audio>
-            <audio controls>
-                <source src="target_audio_en_to_zh.mp3" type="audio/mpeg">
-                您的浏览器不支持音频播放。
-            </audio>
+            <div class="audio-block">
+                <label>Source</label>
+                <audio controls>
+                    <source src="source_audio_en_to_zh.wav" type="audio/wav">
+                    您的浏览器不支持音频播放。
+                </audio>
+            </div>
+            <div class="audio-block">
+                <label>Target</label>
+                <audio controls>
+                    <source src="target_audio_en_to_zh.wav" type="audio/wav">
+                    您的浏览器不支持音频播放。
+                </audio>
+            </div>
         </div>
         <table>
             <tr>
-                <th>样本1</th>
-                <th>样本2</th>
-                <th>样本3</th>
-                <th>样本4</th>
+                <th>CyclePPG-XVC</th>
+                <th>YourTTS</th>
+                <th>AutoCycle-VC</th>
+                <th><b>CASC-XVC (ours)</b></th>
             </tr>
             <tr>
                 <td><audio controls>
-                        <source src="en_to_zh_1.mp3" type="audio/mpeg">
+                        <source src="en_to_zh_1.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="en_to_zh_2.mp3" type="audio/mpeg">
+                        <source src="en_to_zh_2.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="en_to_zh_3.mp3" type="audio/mpeg">
+                        <source src="en_to_zh_3.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="en_to_zh_4.mp3" type="audio/mpeg">
+                        <source src="en_to_zh_4.wav" type="audio/wav">
                     </audio></td>
             </tr>
         </table>
     </div>
 
     <div class="table-container">
-        <h2>中文转中文</h2>
+        <h2>English to English</h2>
         <div class="audio-container">
-            <audio controls>
-                <source src="source_audio_zh_to_zh.mp3" type="audio/mpeg">
-                您的浏览器不支持音频播放。
-            </audio>
-            <audio controls>
-                <source src="target_audio_zh_to_zh.mp3" type="audio/mpeg">
-                您的浏览器不支持音频播放。
-            </audio>
+            <div class="audio-block">
+                <label>Source</label>
+                <audio controls>
+                    <source src="source_audio_zh_to_zh.wav" type="audio/wav">
+                    您的浏览器不支持音频播放。
+                </audio>
+            </div>
+            <div class="audio-block">
+                <label>Target</label>
+                <audio controls>
+                    <source src="target_audio_zh_to_zh.wav" type="audio/wav">
+                    您的浏览器不支持音频播放。
+                </audio>
+            </div>
         </div>
         <table>
             <tr>
-                <th>样本1</th>
-                <th>样本2</th>
-                <th>样本3</th>
-                <th>样本4</th>
+                <th>CyclePPG-XVC</th>
+                <th>YourTTS</th>
+                <th>AutoCycle-VC</th>
+                <th><b>CASC-XVC (ours)</b></th>
             </tr>
             <tr>
                 <td><audio controls>
-                        <source src="zh_to_zh_1.mp3" type="audio/mpeg">
+                        <source src="zh_to_zh_1.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="zh_to_zh_2.mp3" type="audio/mpeg">
+                        <source src="zh_to_zh_2.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="zh_to_zh_3.mp3" type="audio/mpeg">
+                        <source src="zh_to_zh_3.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="zh_to_zh_4.mp3" type="audio/mpeg">
+                        <source src="zh_to_zh_4.wav" type="audio/wav">
                     </audio></td>
             </tr>
         </table>
     </div>
 
     <div class="table-container">
-        <h2>英文转英文</h2>
+        <h2>Chinese to Chinese</h2>
         <div class="audio-container">
-            <audio controls>
-                <source src="source_audio_en_to_en.mp3" type="audio/mpeg">
-                您的浏览器不支持音频播放。
-            </audio>
-            <audio controls>
-                <source src="target_audio_en_to_en.mp3" type="audio/mpeg">
-                您的浏览器不支持音频播放。
-            </audio>
+            <div class="audio-block">
+                <label>Source</label>
+                <audio controls>
+                    <source src="source_audio_en_to_en.wav" type="audio/wav">
+                    您的浏览器不支持音频播放。
+                </audio>
+            </div>
+            <div class="audio-block">
+                <label>Target</label>
+                <audio controls>
+                    <source src="target_audio_en_to_en.wav" type="audio/wav">
+                    您的浏览器不支持音频播放。
+                </audio>
+            </div>
         </div>
         <table>
             <tr>
-                <th>样本1</th>
-                <th>样本2</th>
-                <th>样本3</th>
-                <th>样本4</th>
+                <th>CyclePPG-XVC</th>
+                <th>YourTTS</th>
+                <th>AutoCycle-VC</th>
+                <th><b>CASC-XVC (ours)</b></th>
             </tr>
             <tr>
                 <td><audio controls>
-                        <source src="en_to_en_1.mp3" type="audio/mpeg">
+                        <source src="en_to_en_1.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="en_to_en_2.mp3" type="audio/mpeg">
+                        <source src="en_to_en_2.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="en_to_en_3.mp3" type="audio/mpeg">
+                        <source src="en_to_en_3.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="en_to_en_4.mp3" type="audio/mpeg">
+                        <source src="en_to_en_4.wav" type="audio/wav">
                     </audio></td>
             </tr>
         </table>
