--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         h1,
         h2 {
-            text-align: center;
+            text-align: left;
         }
 
         .author-info {
@@ -33,12 +33,19 @@
 
         .table-container {
             margin-bottom: 60px;
+            margin: auto;
+
+
+
+
         }
 
         table {
-            width: 100%;
-            border-collapse: collapse;
+            width: 80%;
+            border-collapse: separate;
+            table-layout: fixed;
             margin-top: 10px;
+
         }
 
         th,
@@ -54,7 +61,7 @@
 
         .audio-container {
             display: flex;
-            justify-content: space-between;
+            justify-content: normal;
             margin-bottom: 10px;
         }
 
@@ -66,7 +73,7 @@
         }
 
         .audio-block {
-            width: 30%;
+            width: 15%;
             text-align: center;
         }
 
