--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <div class="abstract">
         <h3>Abstract</h3>
-<!--         <p>Cross-lingual voice conversion (XVC) is a technology that modifies speaker identity while preserving
+        <p>Cross-lingual voice conversion (XVC) is a technology that modifies speaker identity while preserving
             linguistic content
             in scenarios where the source and target speakers speak different languages.
             Previous non-parallel methods based on disentanglement face severe training-testing inconsistency issues in
@@ -122,7 +122,7 @@
             perturbation for clean content disentanglement.
             Both subjective and objective results on a bilingual (English and Chinese) dataset demonstrate that our
             approach
-            achieves significant improvements in XVC tasks.</p> -->
+            achieves significant improvements in XVC tasks.</p>
     </div>
 
     <div class="table-container">
@@ -131,14 +131,14 @@
             <div class="audio-block">
                 <label>Source</label>
                 <audio controls>
-                    <source src="source_audio_zh_to_en.wav" type="audio/wav">
+                    <source src="demo/src/p246_119.wav" type="audio/wav">
                     您的浏览器不支持音频播放。
                 </audio>
             </div>
             <div class="audio-block">
                 <label>Target</label>
                 <audio controls>
-                    <source src="target_audio_zh_to_en.wav" type="audio/wav">
+                    <source src="demo/tar/BAC009S0005W0121.wav" type="audio/wav">
                     您的浏览器不支持音频播放。
                 </audio>
             </div>
@@ -152,16 +152,16 @@
             </tr>
             <tr>
                 <td><audio controls>
-                        <source src="zh_to_en_1.wav" type="audio/wav">
+                        <source src="demo/en2ch/CyclePPG-VC/p246_119-S0005_generated_e2e.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="zh_to_en_2.wav" type="audio/wav">
+                        <source src="demo/en2ch/Yourtts/p246_119-BAC009S0005W0121.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="zh_to_en_3.wav" type="audio/wav">
+                        <source src="demo/en2ch/Autocycle-VC/p246_119xS0005_generated_e2e.wav" type="audio/wav">
                     </audio></td>
                 <td><audio controls>
-                        <source src="zh_to_en_4.wav" type="audio/wav">
+                        <source src="demo/en2ch/proposed/p246_119-BAC009S0005W0121.wav" type="audio/wav">
                     </audio></td>
             </tr>
         </table>
